Return product @ removal
